--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@next/font": "^14.2.15",
+    "@next/third-parties": "^15.1.6",
     "lucide-react": "^0.472.0",
     "motion": "^10.18.0",
     "next": "15.0.3",
